# fuzzy-search

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .provenance.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  browser.js  bunfig.toml  fuzzy-search-wasm32-wasi.d.ts  fuzzy-search.wasi-browser.d.ts  fuzzy-search.wasi-browser.js  fuzzy-search.wasi.cjs  index.cjs  index.d.ts  index.js  lib.d.ts  lib.js  lib.mjs  lib.wasm.js  llms.txt  package.json  tsconfig.json  tsdown.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  provenance-nightly.yml  provenance-sync.yml  release.yml
__bench__/: correctness.ts  download-corpus.sh  helpers.ts  oracle-cross-check.ts  package.json  speed.ts
__test__/: index.spec.ts  properties.spec.ts  vite.spec.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/wasm32-wasi/: README.md  fuzzy-search.wasi-browser.js  fuzzy-search.wasi.cjs  fuzzy-search.wasm32-wasi.wasm  package.json
provenance/: THIRD-PARTY-NOTICES.txt  report.json  sbom.cdx.json
scripts/: check-metadata.mjs  ensure-wasm-artifact.mjs  runtime-smoke.mjs  smoke-node.mjs  version-sync.mjs
src/: core.ts  index.ts  lib.rs  lib.ts  vite.ts  wasm-fetch-guard.ts  wasm.ts
wasm/: package.json
